--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5103,7 +5103,6 @@ section.services h3 {
   padding-right: 1.11111%; }
 
 .property-info .property-header .social {
-  height: 63px;
   box-sizing: border-box;
   width: 22.22222%;
   float: right;
@@ -5112,11 +5111,11 @@ section.services h3 {
 
 .property-info .property-header .social a {
   float: right;
-  margin-left: 10px; }
+  margin-left: 10px;
+  margin-right: 0; }
 
 .property-info .property-header .social a .fa-circle {
-  border: 1px solid #999999;
-  height: 43px; }
+  border: 1px solid #999999; }
 
 .property-info .property-header .social a .fa-inverse {
   color: #999999; }
@@ -5924,14 +5923,8 @@ section.services h3 {
 .company.why p {
   margin-top: 0; }
 
-.blog {
-  text-align: center; }
-
 .blog span {
   text-transform: uppercase; }
-
-.blog a {
-  color: blue; }
 
 .blog .blog-container {
   position: relative; }
@@ -5955,48 +5948,65 @@ section.services h3 {
 .blog .news-left, .blog .news-right {
   background-color: #fff; }
 
-.blog .news-left {
-  box-sizing: border-box;
-  width: 66.66667%;
+.blog .blog-left {
+  width: 57.62712%;
   float: left;
-  padding-left: 0.83333%;
-  padding-right: 0.83333%; }
+  margin-right: 1.69492%; }
 
-.blog .news-right {
-  box-sizing: border-box;
-  width: 33.33333%;
-  float: left;
-  padding-left: 0.83333%;
-  padding-right: 0.83333%; }
+.blog .blog-right {
+  width: 32.20339%;
+  float: right;
+  margin-right: 0; }
 
-.blog .partial {
+.blog .entry, .blog .authors {
   box-sizing: border-box;
   width: 100%;
-  float: left;
-  padding-left: 1.25%;
-  padding-right: 1.25%;
-  background-color: #86bbe6;
-  display: inline-block; }
+  float: left; }
 
-.blog .partial:before, .blog .partial:after {
+.blog .entry:before, .blog .entry:after, .blog .authors:before, .blog .authors:after {
   content: "";
   display: table;
   clear: both; }
 
-.blog .partial.entry {
-  box-sizing: border-box;
-  width: 66.66667%;
-  float: left;
-  padding-left: 0.83333%;
-  padding-right: 0.83333%; }
+.blog .blog-header {
+  font-family: "Copernicus-Semibold";
+  color: #999999;
+  text-transform: uppercase;
+  font-size: 19px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #25282A;
+  margin-bottom: 30px;
+  margin-top: 60px; }
 
-.blog .authors {
+.blog .entries {
   box-sizing: border-box;
-  width: 33.33333%;
-  float: right;
-  padding-left: 0.83333%;
-  padding-right: 0.83333%;
-  background-color: #fabcad; }
+  width: 100%;
+  float: left; }
+
+.blog .entry {
+  margin-bottom: 60px;
+  border-bottom: 1px solid #999999;
+  padding-bottom: 60px;
+  box-sizing: border-box;
+  width: 100%;
+  float: left; }
+
+.blog .entry .preview-image-container {
+  box-sizing: border-box;
+  width: 42.85714%;
+  float: left;
+  position: relative; }
+
+.blog .entry .preview-image-container:before, .blog .entry .preview-image-container:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.blog .entry .preview-image {
+  width: 100%;
+  padding-top: 100%;
+  display: block;
+  position: relative; }
 
 .blog .entry .date, .blog .entry .author {
   text-transform: none;
@@ -6006,6 +6016,16 @@ section.services h3 {
 .blog .entry .author {
   color: #009B77; }
 
+.blog .entry .preview {
+  box-sizing: border-box;
+  width: 57.14286%;
+  float: right;
+  padding-left: 1.42857%;
+  padding-right: 1.42857%; }
+
+.blog .entry h2 {
+  margin-top: 0; }
+
 .blog .entry p {
   line-height: 28px; }
 
@@ -6013,6 +6033,18 @@ section.services h3 {
   font-size: 16px;
   font-family: "Copernicus-MediumItalic";
   color: #009B77; }
+
+.mask {
+  z-index: 9;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity: .2;
+  height: 100%;
+  width: 100%; }
 
 .hero {
   height: 600px;
@@ -6036,18 +6068,6 @@ section.services h3 {
 
 .hero * {
   z-index: 10; }
-
-.hero .mask {
-  z-index: 9;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: black;
-  opacity: .2;
-  height: 100%;
-  width: 100%; }
 
 .hero.small {
   height: 450px; }
@@ -6816,7 +6836,18 @@ section.faq {
   width: 50%;
   float: left;
   height: 400px;
-  background-size: cover; }
+  background-size: cover;
+  position: relative; }
+
+.featured-image .mask {
+  transition: all 0.25s;
+  opacity: 0; }
+
+.featured-image:hover {
+  transition: all 0.25s; }
+
+.featured-image:hover .mask {
+  opacity: 0.2; }
 
 .post-details {
   box-sizing: border-box;
