--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -52,6 +52,7 @@
 			padding-top: 100%;
 			display: block;
 			position: relative;
+			background-position:center;
 		}
 		.date,.author {
 			text-transform: none;
