--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -1,6 +1,8 @@
 .featured {
 	height: 400px;
 	text-align: left;
+	margin-bottom: 0;
+	border-bottom: none;
 	h3 {
 		color: $text-green;
 		margin-top: 0;
@@ -18,7 +20,7 @@
 	height: 400px;
 	background-size: cover;
 	position: relative;
-	
+	background-position: center;
 	.mask {
 		transition: all .25s;
 		opacity: 0;
