--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6006,7 +6006,8 @@ section.services h3 {
   width: 100%;
   padding-top: 100%;
   display: block;
-  position: relative; }
+  position: relative;
+  background-position: center; }
 
 .blog .entry .date, .blog .entry .author {
   text-transform: none;
@@ -6819,7 +6820,9 @@ section.faq {
 
 .featured {
   height: 400px;
-  text-align: left; }
+  text-align: left;
+  margin-bottom: 0;
+  border-bottom: none; }
 
 .featured h3 {
   color: #009B77;
@@ -6837,7 +6840,8 @@ section.faq {
   float: left;
   height: 400px;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  background-position: center; }
 
 .featured-image .mask {
   transition: all 0.25s;
