--- a/statamic/_themes/main/partials/featured_post.html
+++ b/statamic/_themes/main/partials/featured_post.html
@@ -1,4 +1,4 @@
-<div class="featured entry">
+<div class="featured">
 
 	<a href="{{ url }}" class="featured-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
 	<div class="post-details">
