--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -3,7 +3,7 @@
 <h1>Our Team</h1>
 <h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
 		<div class="grid-constrained">
-			{{ entries:listing folder="agents" }}
+			{{ entries:listing folder="agents" conditions="hidden:!true"}}
 
 			<div class="grid-3-constrained-padding">
 				<div>
