--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6048,7 +6048,8 @@ section.services h3 {
   width: 57.14286%;
   float: right;
   padding-left: 1.42857%;
-  padding-right: 1.42857%; }
+  padding-right: 1.42857%;
+  padding-left: 30px; }
 
 .blog .preview .divider {
   height: 1px;
