--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@
 @import 'components/_faq_aside.scss';
 @import 'components/_company.scss';
 @import 'components/_blog_overview.scss';
+@import 'components/_blog_entry.scss';
 
 // modules
 @import 'modules/_hero.scss';
