--- a/statamic/_themes/main/templates/taxonomies.html
+++ b/statamic/_themes/main/templates/taxonomies.html
@@ -1,27 +1,52 @@
-<div class="section leading">
-<div class="container">
-	<div class="row">
-		<div class="eight columns">
-			<div class="article">
-				<h1>Regarding <em>{{ taxonomy_name|title }}</em></h1>
-	
-				<div class="taxonomy-results">
-					{{ entries:listing folder="blog" limit="4" taxonomy="true" }}
-						{{ if no_results }}
-							<p class="sorry">
-								Nothing found for {{ taxonomy_name }}.
-							</p>
-						{{ else }}
-							{{ content}}
-						{{ endif }}
+<div class="blog">	
+	<section class="leading">
+		<div class="container">
+
+			<div class="blog-container">
+
+				
+
+				<div class="blog-left">
+					<h2 class="blog-header">{{ taxonomy_name|title }}</h2>
+					<div class="entries">
+					{{ entries:listing folder="blog" limit="5" taxonomy="true" }}
+					<div class="entry">
+					<div class="preview-image-container">
+						<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
+					</div>
+						<div class="preview">
+							<a href="{{ url }}"><h2>{{ title }}</h2></a>
+							<div class="divider"></div>
+							{{ theme:partial src="blog_social" use_context="true" }}
+							<div class="truncated">
+								{{ content|truncate:200 }}
+								<a class="read-more" href="{{ url }}">Read More</a>
+							</div>
+						</div>
+					</div>
 					{{ /entries:listing }}
 				</div>
+				</div>
+				
+				{{ theme:partial src="blog_right" use_context="true" }}
 			</div>
 		</div>
-		<div class="four columns sidebar" role="complementary">
-			{{ theme:partial src="sub-navigation" }}		
-			{{ theme:partial src="common-sidebar" }}
+	</section>
+
+	<div class="container">
+		{{ entries:pagination folder="blog" limit="5" }}
+		{{ if next_page || previous_page }}
+		<div class="pagination clearfix">
+			{{ if next_page }}
+			<a href="{{ next_page }}" class="older">Older Posts</a>
+			{{ endif }}
+			{{ if previous_page }}
+			<a href="{{ previous_page }}" class="newer">Newer Posts</a>
+			{{ endif }}
 		</div>
+		{{ endif }}
+		{{ /entries:pagination }}
 	</div>
-</div>
+	
+
 </div>
