--- a/statamic/_themes/main/templates/blog.html
+++ b/statamic/_themes/main/templates/blog.html
@@ -21,32 +21,7 @@
 						<div class="preview">
 							<a href="{{ url }}"><h2>{{ title }}</h2></a>
 							<div class="divider"></div>
-							<span class="date">Posted {{ date }} by </span>
-						{{ relate:author }}
-							<a class="author" href="{{ _site_root }}blog/authors/{{ title|lower }}">
-							{{ title }}
-							</a>
-						{{ /relate:author }}
-							<div class="social">
-								<a href="">
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="javascript:selectPinImage()">
-									<span target="_blank" class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
-									<span  class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</div>
+							{{ theme:partial src="blog_social" use_context="true" }}
 							<div class="truncated">
 								{{ content|truncate:200 }}
 								<a class="read-more" href="{{ url }}">Read More</a>
