--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6143,6 +6143,11 @@ section.services h3 {
   padding-left: 3px;
   font-family: "Copernicus-Semibold"; }
 
+.title-holder {
+  height: 24px;
+  width: 100%;
+  padding-bottom: 27px; }
+
 .hero {
   height: 600px;
   position: relative;
