--- a/statamic/_themes/main/templates/blog-entry.html
+++ b/statamic/_themes/main/templates/blog-entry.html
@@ -6,9 +6,13 @@
 
 				<div class="blog-left">
 					<ul class="categories">
+					{{ if categories|not_empty }}
 						{{ categories }}
 						<li><a href="{{ _site_root }}blog/categories/{{ title|lower }}">{{ value }}</a></li>
 						{{ /categories }}
+					{{ else }}
+						<div class="title-holder"></div>
+					{{ endif }}
 					</ul>
 					<h1>{{ title }}</h1>
 					{{ theme:partial src="blog_social" use_context="true" }}
