initial street easy

--- a/src/scss/components/_blog_entry.scss
+++ b/src/scss/components/_blog_entry.scss
@@ -18,7 +18,7 @@
 	}
 }
 
-.blog.blog-entry {
+.blog.blog-entry .blog-left {
 	h1 {
 		font-family: $header-font-family-medium-italic;
 		font-size: 34px;
