--- a/statamic/_themes/main/templates/blog-entry.html
+++ b/statamic/_themes/main/templates/blog-entry.html
@@ -33,7 +33,7 @@
 						</ul>
 						<h2 class="blog-header">Other News</h2>
 						<div class="twitter-feed">
-							
+							{{ theme:partial src="twitter" }}
 						</div>
 					</div>
 				</div>
