--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6121,19 +6121,19 @@ section.services h3 {
   font-size: 19px;
   color: #999999; }
 
-.blog.blog-entry h1 {
+.blog.blog-entry .blog-left h1 {
   font-family: "Copernicus-MediumItalic";
   font-size: 34px;
   line-height: 43px; }
 
-.blog.blog-entry .main-image {
+.blog.blog-entry .blog-left .main-image {
   margin: 30px 0; }
 
-.blog.blog-entry .blog-left {
+.blog.blog-entry .blog-left .blog-left {
   border-bottom: 1px solid #CCCCCC;
   padding-bottom: 30px; }
 
-.blog.blog-entry p:first-of-type::first-letter {
+.blog.blog-entry .blog-left p:first-of-type::first-letter {
   float: left;
   color: #009B77;
   font-size: 83px;
