street easy styles

--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -282,7 +282,7 @@
 
 				{{ if summary_intro|not_empty }}
 				<div class="summary">
-					{{ summary_intro }}
+					<p>{{ summary_intro }}</p>
 					<div style="display: none">
 						{{ summary_full }}
 						<p class="small">
