street easy styles

--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -141,7 +141,7 @@
 	{{ endif }}
 	<media>
 		{{ photo_carousel }}
-		<photo url="{{ _site_root}}{{ value }}" />
+		<photo url="http://lesliegarfield.com{{ value }}" />
 		{{ /photo_carousel }}
 	</media>
 	
