street easy styles

--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -145,6 +145,7 @@
 		{{ /photo_carousel }}
 		{{ if floor_plans|not_empty }}
 		<floorplan url="{{ _site_url }}{{ floor_plans }}" />
+		{{ endif }}
 	</media>
 	
 </property>
